website/websites/u64q/code/templates.1.pyston.log

 Thu, 06 May 2021 22:58:13 GMT

COMMAND LINE:
 /usr/bin/pyston templates.pyston 1000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "templates.pyston", line 35
    print res
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(res)?
